--- a/Credit Risk Evaluator.ipynb
+++ b/Credit Risk Evaluator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1397,7 +1397,7 @@
        "[12180 rows x 86 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1409,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1421,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1433,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2955,7 +2955,7 @@
        "[12180 rows x 94 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2966,7 +2966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2975,8 +2975,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I hypothesize that random forest classifier would work better since linear regression model is used to predict simpler scenario with less independent variables whereas random forest classifier will not be heavily influenced by quantity of variables."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -3013,7 +3020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -3035,8 +3042,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "My prediction is that scaling will improve both Classifications at least by 10 percent since the weight of the independent variables are very different."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3049,7 +3063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -3085,7 +3099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -3093,15 +3107,22 @@
      "output_type": "stream",
      "text": [
       "Training Score: 0.9999178981937603\n",
-      "Testing Score: 0.6337728626116547\n"
+      "Testing Score: 0.6137813696299447\n"
      ]
     }
    ],
    "source": [
     "# Train a Random Forest Classifier model on the scaled data and print the model score\n",
-    "clf = RandomForestClassifier(random_state=1, n_estimators=50).fit(X_train_scaled, training_y)\n",
+    "clf = RandomForestClassifier( n_estimators=50).fit(X_train_scaled, training_y)\n",
     "print(f'Training Score: {clf.score(X_train_scaled, training_y)}')\n",
     "print(f'Testing Score: {clf.score(X_test_scaled, test_y)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "My prediction is inaccurate for the testing phase, while it is correct for the training phase. I still think Forest Classifier will work better once the parameters are tweaked."
    ]
   }
  ],
